<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".ui.details.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Artwork Title -->
        <TextView
            android:id="@+id/artworkTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadlineLarge"
            android:fontFamily="@font/source_sans_3_bold"
            android:textSize="24sp"
            android:textColor="@color/dark_aubergine"
            tools:text="Mona Lisa" />

        <!-- Artist -->
        <TextView
            android:id="@+id/artistLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/artist"
            android:fontFamily="@font/source_sans_3_bold" />

        <TextView
            android:id="@+id/artistValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Leonardo da Vinci"
            android:fontFamily="@font/source_sans_3_regular" />

        <!-- Year -->
        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/year"
            android:fontFamily="@font/source_sans_3_bold" />

        <TextView
            android:id="@+id/yearValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="1503"
            android:fontFamily="@font/source_sans_3_regular" />

        <!-- Medium -->
        <TextView
            android:id="@+id/mediumLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/medium"
            android:fontFamily="@font/source_sans_3_bold" />

        <TextView
            android:id="@+id/mediumValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Oil paint"
            android:fontFamily="@font/source_sans_3_regular" />

        <!-- Description -->
        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:fontFamily="@font/source_sans_3_bold" />

        <TextView
            android:id="@+id/descriptionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:layout_marginTop="6dp"
            tools:text="A half-length portrait painting of a woman with an enigmatic smile, considered one of the most famous paintings in the world."
            android:fontFamily="@font/source_sans_3_regular" />

    </LinearLayout>
</ScrollView>